[build-system]
requires = ["setuptools>=61.0,<69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bittencert"
version = "0.0.3"
description = "Generate and verify TLS certs via bittensor keypairs"
authors = [{name = "Jon Durbin", email = "jon@jondurbin.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "substrate-interface>=1.7.11",
    "aiohttp>=3.10.0",
    "cryptography>=44.0.0",
    "async-lru>=2.0.0",
    "typer>=0.12.5",
]

[project.optional-dependencies]
test = [
    "fastapi>=0.115.5",
    "uvicorn>=0.32.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=1.0.0",
]

[project.scripts]
bittencert = "bittencert.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["bittencert*"]
